# cyclone-eye

./: .gitignore  pyproject.toml
cyclone.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cyclone/core/basic_modules/: attention2d.py  drpi2d.py  msa2d.py  patch2d.py
cyclone/core/basic_utils/: pad2d.py  rpi.py
cyclone/core/head_n_tail/: spatial_vanilla.py
cyclone/core/spine/: spatial_arch.py
cyclone/impl/conv/: conv_arch.py  conv_bricks.py
cyclone/impl/hat/: hat_arch.py  hat_bricks.py  hat_utils.py
cyclone/impl/hma/: hma_arch.py  hma_bricks.py  hma_utils.py  transformer_bricks.py
cyclone/impl/hvit/: hvit_arch.py  hvit_bricks.py
cyclone/impl/swin/: swin_arch.py  swin_bricks.py  swin_utils.py
